--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,16 +1,21 @@
 body {
     --header-height: 100px;
     --header-padding: 20px;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 header {
-    position: fixed;
-    top: 0;
-    left: 0;
+    /* position: fixed; */
+    /* top: 0; */
+    /* left: 0 */;
+    position: relative;
     box-sizing: border-box;
     padding: var(--header-padding);
     height: var(--header-height);
     width: 100%;
+    flex-shrink: 0;
 }
 
 header > .logo {
@@ -38,8 +43,15 @@ header > nav {
     min-width: 400px;
 }
 
-main {
+body > .holster {
     padding-top: var(--header-height);
+    box-sizing: border-box;
+    flex-grow: 1;
+    overflow-y: scroll;
+}
+
+main {
+    /* padding-top: var(--header-height); */
 }
 
 main > section {
@@ -47,11 +59,14 @@ main > section {
     padding: 1rem;
 }
 
+main > section.fullpage {
+    height: calc(100vh - var(--header-height));
+}
+
 footer {
     min-height: var(--header-height);
     display: flex;
     flex-direction: column;
-    /* gap: 1rem; */
     justify-content: center;
     align-items: center;
 }
