Update mobile layouts
Move event-list component to its own file
Update default link styles
Add flex layout for sections
Move section headers to separate <div> elements
Make columns layout distinct from sections (applies to div elements)

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -73,3 +73,11 @@ section.dark h4 {
 section.dark p {
     color: var(--theme-text-dark);
 }
+
+a {
+    color: var(--c-aqua-darker);
+}
+
+a:hover {
+    color: var(--c-aqua);
+}
