--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,75 +8,64 @@ main > section {
     box-shadow: 0px 2px 3px var(--theme-shadow);
 }
 
+main section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: space-around;
+}
+
+main section > .section-header {
+    flex: 1 0 0;
+}
+
+main section > .section-content {
+    flex-grow: 1;
+}
+
 footer {
     scroll-snap-align: end;
 }
 
-main > section.columns {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-main > section.columns > section {
-    padding-inline: 1rem;
-}
-
-
-
-/* Event-List component */
-ul.event-list {
-    list-style: none;
+main > .columns {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    width: 100%;
-    padding: 0;
 }
 
-ul.event-list > li {
-    display: grid;
-    grid-template-rows: 24px 1fr 16px;
-    padding: 1rem;
-    background-color: var(--theme-superlight);
-    border: solid 1px var(--iron);
-    border-radius: 1rem;
-    box-shadow: 0px 2px 3px var(--theme-shadow);
+main > .columns > section {
+    padding-inline: 1rem;
+    scroll-snap-align: start;
 }
 
-ul.event-list > li > .event-list--header {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    grid-align-items: center;
+@media(min-width: 700px){
+    main > .columns {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	scroll-snap-align: none;
+    }
 }
 
-ul.event-list > li .event-list--date {
-    color: var(--c-deepspace);
+/* Service List */
+.service-list {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
 
-ul.event-list > li h3 {
-    margin: 0;
-}
+/* .service-list > * { */
+/*     scroll-snap-align: center; */
+/* } */
 
-ul.event-list > li a {
-    color: var(--theme-link-light);
-    text-transform: uppercase;
-    user-select: none;
-}
+@media(min-width: 700px){
+    .service-list {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+    }
 
-ul.event-list > li a:hover {
-    filter: brightness(120%);
-}
-
-ul.event-list > li a:active {
-    color: var(--c-green-darker);
-}
-
-ul.event-list > li a::after {
-    content: url('/assets/arrow_right.svg');
-    display: inline-block;
-    margin-left: 5px;
-    height: 1ch;
-    width: 1ch;
+    .service-list > * {
+	scroll-snap-align: none;
+    }
 }
 
 /* Button Component */
